# Chat

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
client/: app.cpp  app.h  client.cpp  client.h  main.cpp
common/: CMakeLists.txt  message.cpp  message.h  message_test.cpp
server/: main.cpp  server.cpp  server.h
